결제대기 사유 상세추가
결제대기 사유 상세추가

--- a/files/정기상품__결제대기_상태안내_/styles.css
+++ b/files/정기상품__결제대기_상태안내_/styles.css
@@ -3,7 +3,7 @@
   background-image:none;
   position:static;
   left:auto;
-  width:1315px;
+  width:2348px;
   margin-left:0;
   margin-right:0;
   text-align:left;
@@ -12,7 +12,7 @@
   position:absolute;
   z-index:0;
 }
-#u231_img {
+#u260_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -20,7 +20,7 @@
   width:1315px;
   height:1270px;
 }
-#u231 {
+#u260 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -28,7 +28,7 @@
   width:1315px;
   height:1270px;
 }
-#u231_text {
+#u260_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -37,7 +37,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u232_img {
+#u261_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -45,7 +45,7 @@
   width:733px;
   height:431px;
 }
-#u232 {
+#u261 {
   border-width:0px;
   position:absolute;
   left:403px;
@@ -53,7 +53,7 @@
   width:733px;
   height:431px;
 }
-#u232_text {
+#u261_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -62,7 +62,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u233_div {
+#u262_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -80,7 +80,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u233 {
+#u262 {
   border-width:0px;
   position:absolute;
   left:438px;
@@ -88,7 +88,7 @@
   width:649px;
   height:76px;
 }
-#u233_text {
+#u262_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -97,7 +97,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u234_img {
+#u263_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -105,7 +105,7 @@
   width:175px;
   height:65px;
 }
-#u234 {
+#u263 {
   border-width:0px;
   position:absolute;
   left:638px;
@@ -114,7 +114,7 @@
   height:65px;
   text-align:left;
 }
-#u234_text {
+#u263_text {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -122,7 +122,7 @@
   width:171px;
   word-wrap:break-word;
 }
-#u235_img {
+#u264_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -130,7 +130,7 @@
   width:61px;
   height:32px;
 }
-#u235 {
+#u264 {
   border-width:0px;
   position:absolute;
   left:465px;
@@ -138,7 +138,7 @@
   width:61px;
   height:32px;
 }
-#u235_text {
+#u264_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -147,7 +147,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u236_div {
+#u265_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -167,7 +167,7 @@
   font-size:12px;
   line-height:18px;
 }
-#u236 {
+#u265 {
   border-width:0px;
   position:absolute;
   left:467px;
@@ -180,7 +180,7 @@
   font-size:12px;
   line-height:18px;
 }
-#u236_text {
+#u265_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -188,7 +188,7 @@
   width:122px;
   white-space:nowrap;
 }
-#u237_img {
+#u266_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -196,7 +196,7 @@
   width:300px;
   height:72px;
 }
-#u237 {
+#u266 {
   border-width:0px;
   position:absolute;
   left:836px;
@@ -204,7 +204,7 @@
   width:300px;
   height:72px;
 }
-#u237_text {
+#u266_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -213,7 +213,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u238_div {
+#u267_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -233,7 +233,7 @@
   font-size:12px;
   color:#FF0000;
 }
-#u238 {
+#u267 {
   border-width:0px;
   position:absolute;
   left:850px;
@@ -246,7 +246,7 @@
   font-size:12px;
   color:#FF0000;
 }
-#u238_text {
+#u267_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -254,7 +254,7 @@
   width:300px;
   word-wrap:break-word;
 }
-#u239_div {
+#u268_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -272,7 +272,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u239 {
+#u268 {
   border-width:0px;
   position:absolute;
   left:415px;
@@ -280,7 +280,7 @@
   width:735px;
   height:137px;
 }
-#u239_text {
+#u268_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -289,7 +289,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u240_img {
+#u269_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -297,7 +297,7 @@
   width:710px;
   height:60px;
 }
-#u240 {
+#u269 {
   border-width:0px;
   position:absolute;
   left:415px;
@@ -305,7 +305,7 @@
   width:710px;
   height:60px;
 }
-#u240_text {
+#u269_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -314,7 +314,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u241_div {
+#u270_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -333,7 +333,7 @@
   box-shadow:none;
   color:#FFFFFF;
 }
-#u241 {
+#u270 {
   border-width:0px;
   position:absolute;
   left:1125px;
@@ -342,7 +342,7 @@
   height:20px;
   color:#FFFFFF;
 }
-#u241_text {
+#u270_text {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -350,7 +350,7 @@
   width:37px;
   white-space:nowrap;
 }
-#u241_ann {
+#u270_ann {
   border-width:0px;
   position:absolute;
   left:1159px;
@@ -358,7 +358,7 @@
   width:1px;
   height:1px;
 }
-#u242_img {
+#u271_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -366,7 +366,7 @@
   width:205px;
   height:42px;
 }
-#u242 {
+#u271 {
   border-width:0px;
   position:absolute;
   left:653px;
@@ -374,12 +374,806 @@
   width:205px;
   height:42px;
 }
-#u242_text {
+#u271_text {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
   width:0px;
   visibility:hidden;
+  word-wrap:break-word;
+}
+#u273 {
+  border-width:0px;
+  position:absolute;
+  left:1221px;
+  top:520px;
+  width:1127px;
+  height:336px;
+}
+#u274_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:172px;
+  height:34px;
+}
+#u274 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:172px;
+  height:34px;
+  font-family:'돋움';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  color:#80878D;
+  text-align:center;
+}
+#u274_text {
+  border-width:0px;
+  position:absolute;
+  left:5px;
+  top:14px;
+  width:162px;
+  word-wrap:break-word;
+}
+#u275_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:621px;
+  height:34px;
+}
+#u275 {
+  border-width:0px;
+  position:absolute;
+  left:172px;
+  top:0px;
+  width:621px;
+  height:34px;
+  font-family:'돋움';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  color:#80878D;
+  text-align:center;
+}
+#u275_text {
+  border-width:0px;
+  position:absolute;
+  left:5px;
+  top:14px;
+  width:611px;
+  word-wrap:break-word;
+}
+#u276_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:334px;
+  height:34px;
+}
+#u276 {
+  border-width:0px;
+  position:absolute;
+  left:793px;
+  top:0px;
+  width:334px;
+  height:34px;
+  font-family:'돋움';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  color:#000000;
+  text-align:center;
+}
+#u276_text {
+  border-width:0px;
+  position:absolute;
+  left:5px;
+  top:14px;
+  width:324px;
+  word-wrap:break-word;
+}
+#u277_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:172px;
+  height:34px;
+}
+#u277 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:34px;
+  width:172px;
+  height:34px;
+  font-family:'돋움';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u277_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:14px;
+  width:157px;
+  word-wrap:break-word;
+}
+#u278_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:621px;
+  height:34px;
+}
+#u278 {
+  border-width:0px;
+  position:absolute;
+  left:172px;
+  top:34px;
+  width:621px;
+  height:34px;
+  font-family:'돋움';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u278_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:14px;
+  width:606px;
+  word-wrap:break-word;
+}
+#u279_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:334px;
+  height:34px;
+}
+#u279 {
+  border-width:0px;
+  position:absolute;
+  left:793px;
+  top:34px;
+  width:334px;
+  height:34px;
+  font-family:'돋움 Bold', '돋움 Regular', '돋움';
+  font-weight:700;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u279_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:14px;
+  width:319px;
+  word-wrap:break-word;
+}
+#u280_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:172px;
+  height:34px;
+}
+#u280 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:68px;
+  width:172px;
+  height:34px;
+  font-family:'돋움';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u280_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:14px;
+  width:157px;
+  word-wrap:break-word;
+}
+#u281_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:621px;
+  height:34px;
+}
+#u281 {
+  border-width:0px;
+  position:absolute;
+  left:172px;
+  top:68px;
+  width:621px;
+  height:34px;
+  font-family:'돋움';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u281_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:14px;
+  width:606px;
+  word-wrap:break-word;
+}
+#u282_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:334px;
+  height:34px;
+}
+#u282 {
+  border-width:0px;
+  position:absolute;
+  left:793px;
+  top:68px;
+  width:334px;
+  height:34px;
+  font-family:'돋움 Bold', '돋움 Regular', '돋움';
+  font-weight:700;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u282_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:14px;
+  width:319px;
+  word-wrap:break-word;
+}
+#u283_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:172px;
+  height:40px;
+}
+#u283 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:102px;
+  width:172px;
+  height:40px;
+  font-family:'돋움';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u283_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:17px;
+  width:157px;
+  word-wrap:break-word;
+}
+#u284_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:621px;
+  height:40px;
+}
+#u284 {
+  border-width:0px;
+  position:absolute;
+  left:172px;
+  top:102px;
+  width:621px;
+  height:40px;
+  font-family:'돋움';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u284_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:17px;
+  width:606px;
+  word-wrap:break-word;
+}
+#u285_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:334px;
+  height:40px;
+}
+#u285 {
+  border-width:0px;
+  position:absolute;
+  left:793px;
+  top:102px;
+  width:334px;
+  height:40px;
+  font-family:'돋움 Bold', '돋움 Regular', '돋움';
+  font-weight:700;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u285_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:17px;
+  width:319px;
+  word-wrap:break-word;
+}
+#u286_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:172px;
+  height:34px;
+}
+#u286 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:142px;
+  width:172px;
+  height:34px;
+  font-family:'돋움';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u286_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:14px;
+  width:157px;
+  word-wrap:break-word;
+}
+#u287_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:621px;
+  height:34px;
+}
+#u287 {
+  border-width:0px;
+  position:absolute;
+  left:172px;
+  top:142px;
+  width:621px;
+  height:34px;
+  font-family:'돋움';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u287_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:14px;
+  width:606px;
+  word-wrap:break-word;
+}
+#u288_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:334px;
+  height:34px;
+}
+#u288 {
+  border-width:0px;
+  position:absolute;
+  left:793px;
+  top:142px;
+  width:334px;
+  height:34px;
+  font-family:'돋움 Bold', '돋움 Regular', '돋움';
+  font-weight:700;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u288_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:14px;
+  width:319px;
+  word-wrap:break-word;
+}
+#u289_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:172px;
+  height:40px;
+}
+#u289 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:176px;
+  width:172px;
+  height:40px;
+  font-family:'돋움';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u289_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:17px;
+  width:157px;
+  word-wrap:break-word;
+}
+#u290_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:621px;
+  height:40px;
+}
+#u290 {
+  border-width:0px;
+  position:absolute;
+  left:172px;
+  top:176px;
+  width:621px;
+  height:40px;
+  font-family:'돋움';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u290_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:17px;
+  width:606px;
+  word-wrap:break-word;
+}
+#u291_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:334px;
+  height:40px;
+}
+#u291 {
+  border-width:0px;
+  position:absolute;
+  left:793px;
+  top:176px;
+  width:334px;
+  height:40px;
+  font-family:'돋움 Bold', '돋움 Regular', '돋움';
+  font-weight:700;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u291_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:17px;
+  width:319px;
+  word-wrap:break-word;
+}
+#u292_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:172px;
+  height:40px;
+}
+#u292 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:216px;
+  width:172px;
+  height:40px;
+  font-family:'돋움';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u292_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:17px;
+  width:157px;
+  word-wrap:break-word;
+}
+#u293_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:621px;
+  height:40px;
+}
+#u293 {
+  border-width:0px;
+  position:absolute;
+  left:172px;
+  top:216px;
+  width:621px;
+  height:40px;
+  font-family:'돋움';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u293_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:17px;
+  width:606px;
+  word-wrap:break-word;
+}
+#u294_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:334px;
+  height:40px;
+}
+#u294 {
+  border-width:0px;
+  position:absolute;
+  left:793px;
+  top:216px;
+  width:334px;
+  height:40px;
+  font-family:'돋움 Bold', '돋움 Regular', '돋움';
+  font-weight:700;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u294_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:17px;
+  width:319px;
+  word-wrap:break-word;
+}
+#u295_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:172px;
+  height:40px;
+}
+#u295 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:256px;
+  width:172px;
+  height:40px;
+  font-family:'돋움';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u295_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:17px;
+  width:157px;
+  word-wrap:break-word;
+}
+#u296_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:621px;
+  height:40px;
+}
+#u296 {
+  border-width:0px;
+  position:absolute;
+  left:172px;
+  top:256px;
+  width:621px;
+  height:40px;
+  font-family:'돋움';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u296_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:17px;
+  width:606px;
+  word-wrap:break-word;
+}
+#u297_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:334px;
+  height:40px;
+}
+#u297 {
+  border-width:0px;
+  position:absolute;
+  left:793px;
+  top:256px;
+  width:334px;
+  height:40px;
+  font-family:'돋움 Bold', '돋움 Regular', '돋움';
+  font-weight:700;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u297_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:17px;
+  width:319px;
+  word-wrap:break-word;
+}
+#u298_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:172px;
+  height:40px;
+}
+#u298 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:296px;
+  width:172px;
+  height:40px;
+  font-family:'돋움';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u298_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:17px;
+  width:157px;
+  word-wrap:break-word;
+}
+#u299_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:621px;
+  height:40px;
+}
+#u299 {
+  border-width:0px;
+  position:absolute;
+  left:172px;
+  top:296px;
+  width:621px;
+  height:40px;
+  font-family:'돋움';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u299_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:17px;
+  width:606px;
+  word-wrap:break-word;
+}
+#u300_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:334px;
+  height:40px;
+}
+#u300 {
+  border-width:0px;
+  position:absolute;
+  left:793px;
+  top:296px;
+  width:334px;
+  height:40px;
+  font-family:'돋움 Bold', '돋움 Regular', '돋움';
+  font-weight:700;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u300_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:17px;
+  width:319px;
   word-wrap:break-word;
 }
