--- a/files/정기상품__결제대기_상태안내__2/styles.css
+++ b/files/정기상품__결제대기_상태안내__2/styles.css
@@ -3,7 +3,7 @@
   background-image:none;
   position:static;
   left:auto;
-  width:1001px;
+  width:1143px;
   margin-left:0;
   margin-right:0;
   text-align:left;
@@ -752,4 +752,798 @@
   top:176px;
   width:1px;
   height:1px;
+}
+#u232 {
+  border-width:0px;
+  position:absolute;
+  left:16px;
+  top:778px;
+  width:1127px;
+  height:336px;
+}
+#u233_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:172px;
+  height:34px;
+}
+#u233 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:172px;
+  height:34px;
+  font-family:'돋움';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  color:#80878D;
+  text-align:center;
+}
+#u233_text {
+  border-width:0px;
+  position:absolute;
+  left:5px;
+  top:14px;
+  width:162px;
+  word-wrap:break-word;
+}
+#u234_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:621px;
+  height:34px;
+}
+#u234 {
+  border-width:0px;
+  position:absolute;
+  left:172px;
+  top:0px;
+  width:621px;
+  height:34px;
+  font-family:'돋움';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  color:#80878D;
+  text-align:center;
+}
+#u234_text {
+  border-width:0px;
+  position:absolute;
+  left:5px;
+  top:14px;
+  width:611px;
+  word-wrap:break-word;
+}
+#u235_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:334px;
+  height:34px;
+}
+#u235 {
+  border-width:0px;
+  position:absolute;
+  left:793px;
+  top:0px;
+  width:334px;
+  height:34px;
+  font-family:'돋움';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  color:#000000;
+  text-align:center;
+}
+#u235_text {
+  border-width:0px;
+  position:absolute;
+  left:5px;
+  top:14px;
+  width:324px;
+  word-wrap:break-word;
+}
+#u236_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:172px;
+  height:34px;
+}
+#u236 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:34px;
+  width:172px;
+  height:34px;
+  font-family:'돋움';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u236_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:14px;
+  width:157px;
+  word-wrap:break-word;
+}
+#u237_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:621px;
+  height:34px;
+}
+#u237 {
+  border-width:0px;
+  position:absolute;
+  left:172px;
+  top:34px;
+  width:621px;
+  height:34px;
+  font-family:'돋움';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u237_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:14px;
+  width:606px;
+  word-wrap:break-word;
+}
+#u238_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:334px;
+  height:34px;
+}
+#u238 {
+  border-width:0px;
+  position:absolute;
+  left:793px;
+  top:34px;
+  width:334px;
+  height:34px;
+  font-family:'돋움 Bold', '돋움 Regular', '돋움';
+  font-weight:700;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u238_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:14px;
+  width:319px;
+  word-wrap:break-word;
+}
+#u239_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:172px;
+  height:34px;
+}
+#u239 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:68px;
+  width:172px;
+  height:34px;
+  font-family:'돋움';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u239_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:14px;
+  width:157px;
+  word-wrap:break-word;
+}
+#u240_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:621px;
+  height:34px;
+}
+#u240 {
+  border-width:0px;
+  position:absolute;
+  left:172px;
+  top:68px;
+  width:621px;
+  height:34px;
+  font-family:'돋움';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u240_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:14px;
+  width:606px;
+  word-wrap:break-word;
+}
+#u241_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:334px;
+  height:34px;
+}
+#u241 {
+  border-width:0px;
+  position:absolute;
+  left:793px;
+  top:68px;
+  width:334px;
+  height:34px;
+  font-family:'돋움 Bold', '돋움 Regular', '돋움';
+  font-weight:700;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u241_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:14px;
+  width:319px;
+  word-wrap:break-word;
+}
+#u242_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:172px;
+  height:40px;
+}
+#u242 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:102px;
+  width:172px;
+  height:40px;
+  font-family:'돋움';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u242_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:17px;
+  width:157px;
+  word-wrap:break-word;
+}
+#u243_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:621px;
+  height:40px;
+}
+#u243 {
+  border-width:0px;
+  position:absolute;
+  left:172px;
+  top:102px;
+  width:621px;
+  height:40px;
+  font-family:'돋움';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u243_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:17px;
+  width:606px;
+  word-wrap:break-word;
+}
+#u244_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:334px;
+  height:40px;
+}
+#u244 {
+  border-width:0px;
+  position:absolute;
+  left:793px;
+  top:102px;
+  width:334px;
+  height:40px;
+  font-family:'돋움 Bold', '돋움 Regular', '돋움';
+  font-weight:700;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u244_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:17px;
+  width:319px;
+  word-wrap:break-word;
+}
+#u245_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:172px;
+  height:34px;
+}
+#u245 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:142px;
+  width:172px;
+  height:34px;
+  font-family:'돋움';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u245_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:14px;
+  width:157px;
+  word-wrap:break-word;
+}
+#u246_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:621px;
+  height:34px;
+}
+#u246 {
+  border-width:0px;
+  position:absolute;
+  left:172px;
+  top:142px;
+  width:621px;
+  height:34px;
+  font-family:'돋움';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u246_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:14px;
+  width:606px;
+  word-wrap:break-word;
+}
+#u247_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:334px;
+  height:34px;
+}
+#u247 {
+  border-width:0px;
+  position:absolute;
+  left:793px;
+  top:142px;
+  width:334px;
+  height:34px;
+  font-family:'돋움 Bold', '돋움 Regular', '돋움';
+  font-weight:700;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u247_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:14px;
+  width:319px;
+  word-wrap:break-word;
+}
+#u248_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:172px;
+  height:40px;
+}
+#u248 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:176px;
+  width:172px;
+  height:40px;
+  font-family:'돋움';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u248_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:17px;
+  width:157px;
+  word-wrap:break-word;
+}
+#u249_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:621px;
+  height:40px;
+}
+#u249 {
+  border-width:0px;
+  position:absolute;
+  left:172px;
+  top:176px;
+  width:621px;
+  height:40px;
+  font-family:'돋움';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u249_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:17px;
+  width:606px;
+  word-wrap:break-word;
+}
+#u250_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:334px;
+  height:40px;
+}
+#u250 {
+  border-width:0px;
+  position:absolute;
+  left:793px;
+  top:176px;
+  width:334px;
+  height:40px;
+  font-family:'돋움 Bold', '돋움 Regular', '돋움';
+  font-weight:700;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u250_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:17px;
+  width:319px;
+  word-wrap:break-word;
+}
+#u251_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:172px;
+  height:40px;
+}
+#u251 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:216px;
+  width:172px;
+  height:40px;
+  font-family:'돋움';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u251_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:17px;
+  width:157px;
+  word-wrap:break-word;
+}
+#u252_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:621px;
+  height:40px;
+}
+#u252 {
+  border-width:0px;
+  position:absolute;
+  left:172px;
+  top:216px;
+  width:621px;
+  height:40px;
+  font-family:'돋움';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u252_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:17px;
+  width:606px;
+  word-wrap:break-word;
+}
+#u253_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:334px;
+  height:40px;
+}
+#u253 {
+  border-width:0px;
+  position:absolute;
+  left:793px;
+  top:216px;
+  width:334px;
+  height:40px;
+  font-family:'돋움 Bold', '돋움 Regular', '돋움';
+  font-weight:700;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u253_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:17px;
+  width:319px;
+  word-wrap:break-word;
+}
+#u254_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:172px;
+  height:40px;
+}
+#u254 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:256px;
+  width:172px;
+  height:40px;
+  font-family:'돋움';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u254_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:17px;
+  width:157px;
+  word-wrap:break-word;
+}
+#u255_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:621px;
+  height:40px;
+}
+#u255 {
+  border-width:0px;
+  position:absolute;
+  left:172px;
+  top:256px;
+  width:621px;
+  height:40px;
+  font-family:'돋움';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u255_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:17px;
+  width:606px;
+  word-wrap:break-word;
+}
+#u256_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:334px;
+  height:40px;
+}
+#u256 {
+  border-width:0px;
+  position:absolute;
+  left:793px;
+  top:256px;
+  width:334px;
+  height:40px;
+  font-family:'돋움 Bold', '돋움 Regular', '돋움';
+  font-weight:700;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u256_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:17px;
+  width:319px;
+  word-wrap:break-word;
+}
+#u257_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:172px;
+  height:40px;
+}
+#u257 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:296px;
+  width:172px;
+  height:40px;
+  font-family:'돋움';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u257_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:17px;
+  width:157px;
+  word-wrap:break-word;
+}
+#u258_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:621px;
+  height:40px;
+}
+#u258 {
+  border-width:0px;
+  position:absolute;
+  left:172px;
+  top:296px;
+  width:621px;
+  height:40px;
+  font-family:'돋움';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u258_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:17px;
+  width:606px;
+  word-wrap:break-word;
+}
+#u259_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:334px;
+  height:40px;
+}
+#u259 {
+  border-width:0px;
+  position:absolute;
+  left:793px;
+  top:296px;
+  width:334px;
+  height:40px;
+  font-family:'돋움 Bold', '돋움 Regular', '돋움';
+  font-weight:700;
+  font-style:normal;
+  font-size:12px;
+  text-align:left;
+}
+#u259_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:17px;
+  width:319px;
+  word-wrap:break-word;
 }
