정기이용권 영역추가
정기이용권 영역추가

--- a/files/다운로드_상품__잔여곡수_추가_/styles.css
+++ b/files/다운로드_상품__잔여곡수_추가_/styles.css
@@ -1332,7 +1332,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'나눔고딕 Bold', '나눔고딕 Regular', '나눔고딕';
+  font-family:'나눔고딕 Bold', '나눔고딕';
   font-weight:600;
   font-style:normal;
   font-size:14px;
@@ -1345,7 +1345,7 @@
   top:319px;
   width:105px;
   height:16px;
-  font-family:'나눔고딕 Bold', '나눔고딕 Regular', '나눔고딕';
+  font-family:'나눔고딕 Bold', '나눔고딕';
   font-weight:600;
   font-style:normal;
   font-size:14px;
@@ -1373,7 +1373,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'나눔고딕 Bold', '나눔고딕 Regular', '나눔고딕';
+  font-family:'나눔고딕 Bold', '나눔고딕';
   font-weight:600;
   font-style:normal;
   font-size:14px;
@@ -1386,7 +1386,7 @@
   top:494px;
   width:105px;
   height:16px;
-  font-family:'나눔고딕 Bold', '나눔고딕 Regular', '나눔고딕';
+  font-family:'나눔고딕 Bold', '나눔고딕';
   font-weight:600;
   font-style:normal;
   font-size:14px;
