--- a/files/m___cj_one/styles.css
+++ b/files/m___cj_one/styles.css
@@ -12,7 +12,7 @@
   position:absolute;
   z-index:0;
 }
-#u163_img {
+#u158_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -20,7 +20,7 @@
   width:1280px;
   height:952px;
 }
-#u163 {
+#u158 {
   border-width:0px;
   position:absolute;
   left:1px;
@@ -28,7 +28,7 @@
   width:1280px;
   height:952px;
 }
-#u163_text {
+#u158_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -37,7 +37,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u164_img {
+#u159_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -45,7 +45,7 @@
   width:735px;
   height:333px;
 }
-#u164 {
+#u159 {
   border-width:0px;
   position:absolute;
   left:409px;
@@ -53,7 +53,7 @@
   width:735px;
   height:333px;
 }
-#u164_text {
+#u159_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -62,7 +62,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u165_img {
+#u160_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -70,7 +70,7 @@
   width:115px;
   height:18px;
 }
-#u165 {
+#u160 {
   border-width:0px;
   position:absolute;
   left:654px;
@@ -82,7 +82,7 @@
   font-style:normal;
   font-size:12px;
 }
-#u165_text {
+#u160_text {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -90,7 +90,7 @@
   width:111px;
   white-space:nowrap;
 }
-#u166_img {
+#u161_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -98,7 +98,7 @@
   width:167px;
   height:18px;
 }
-#u166 {
+#u161 {
   border-width:0px;
   position:absolute;
   left:629px;
@@ -110,7 +110,7 @@
   font-style:normal;
   font-size:12px;
 }
-#u166_text {
+#u161_text {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -118,7 +118,7 @@
   width:163px;
   white-space:nowrap;
 }
-#u167_img {
+#u162_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -126,7 +126,7 @@
   width:169px;
   height:18px;
 }
-#u167 {
+#u162 {
   border-width:0px;
   position:absolute;
   left:627px;
@@ -138,7 +138,7 @@
   font-style:normal;
   font-size:12px;
 }
-#u167_text {
+#u162_text {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -146,7 +146,7 @@
   width:165px;
   white-space:nowrap;
 }
-#u168_img {
+#u163_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -154,7 +154,7 @@
   width:169px;
   height:18px;
 }
-#u168 {
+#u163 {
   border-width:0px;
   position:absolute;
   left:627px;
@@ -166,7 +166,7 @@
   font-style:normal;
   font-size:12px;
 }
-#u168_text {
+#u163_text {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -174,7 +174,7 @@
   width:165px;
   word-wrap:break-word;
 }
-#u169_img {
+#u164_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -182,7 +182,7 @@
   width:724px;
   height:88px;
 }
-#u169 {
+#u164 {
   border-width:0px;
   position:absolute;
   left:420px;
@@ -190,7 +190,7 @@
   width:724px;
   height:88px;
 }
-#u169_text {
+#u164_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -199,7 +199,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u170_div {
+#u165_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -218,7 +218,7 @@
   box-shadow:none;
   color:#FFFFFF;
 }
-#u170 {
+#u165 {
   border-width:0px;
   position:absolute;
   left:556px;
@@ -227,7 +227,7 @@
   height:131px;
   color:#FFFFFF;
 }
-#u170_text {
+#u165_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -236,7 +236,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u171_div {
+#u166_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -255,7 +255,7 @@
   box-shadow:none;
   color:#FFFFFF;
 }
-#u171 {
+#u166 {
   border-width:0px;
   position:absolute;
   left:829px;
@@ -264,7 +264,7 @@
   height:20px;
   color:#FFFFFF;
 }
-#u171_text {
+#u166_text {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -272,7 +272,7 @@
   width:37px;
   white-space:nowrap;
 }
-#u171_ann {
+#u166_ann {
   border-width:0px;
   position:absolute;
   left:863px;
@@ -280,7 +280,7 @@
   width:1px;
   height:1px;
 }
-#u172_img {
+#u167_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -288,7 +288,7 @@
   width:135px;
   height:31px;
 }
-#u172 {
+#u167 {
   border-width:0px;
   position:absolute;
   left:561px;
@@ -300,7 +300,7 @@
   font-style:normal;
   font-size:12px;
 }
-#u172_text {
+#u167_text {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -308,7 +308,7 @@
   width:131px;
   word-wrap:break-word;
 }
-#u173_div {
+#u168_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -326,7 +326,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u173 {
+#u168 {
   border-width:0px;
   position:absolute;
   left:414px;
@@ -334,7 +334,7 @@
   width:290px;
   height:40px;
 }
-#u173_text {
+#u168_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -343,7 +343,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u173_ann {
+#u168_ann {
   border-width:0px;
   position:absolute;
   left:697px;
@@ -351,7 +351,7 @@
   width:1px;
   height:1px;
 }
-#u174_div {
+#u169_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -365,30 +365,94 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'나눔고딕 Bold', '나눔고딕';
+  font-family:'나눔고딕 Bold', '나눔고딕 Regular', '나눔고딕';
   font-weight:600;
   font-style:normal;
   font-size:14px;
   color:#800080;
 }
-#u174 {
+#u169 {
   border-width:0px;
   position:absolute;
   left:556px;
   top:703px;
   width:105px;
   height:16px;
-  font-family:'나눔고딕 Bold', '나눔고딕';
+  font-family:'나눔고딕 Bold', '나눔고딕 Regular', '나눔고딕';
   font-weight:600;
   font-style:normal;
   font-size:14px;
   color:#800080;
 }
-#u174_text {
+#u169_text {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
   width:105px;
+  white-space:nowrap;
+}
+#u170_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:150px;
+  height:21px;
+}
+#u170 {
+  border-width:0px;
+  position:absolute;
+  left:864px;
+  top:606px;
+  width:150px;
+  height:21px;
+}
+#u170_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u171_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:79px;
+  height:14px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'돋움';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+}
+#u171 {
+  border-width:0px;
+  position:absolute;
+  left:905px;
+  top:610px;
+  width:79px;
+  height:14px;
+  font-family:'돋움';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+}
+#u171_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:79px;
   white-space:nowrap;
 }
